charts/kubeflow/kubeflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeflow
  namespace: kubeflow
  labels:
    app: kubeflow
spec:
  type: LoadBalancer
  selector:
    app: kubeflow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
